kubernetes/arr-apps/gpu-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nvidia-version-check
spec:
  restartPolicy: OnFailure
  containers:
    - name: nvidia-version-check
      image: "nvidia/cuda:12.5.0-base-ubuntu22.04"
      resources:
        limits:
          nvidia.com/gpu: "1"
