kubernetes/arr-apps/plex-gpu-op.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
    env: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
      env: production
  template:
    metadata:
      labels:
        app: plex
        env: production
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: plex
          image: "linuxserver/plex:latest"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              nvidia.com/gpu: 1
          securityContext:
            privileged: true
          ports:
            - containerPort: 32400
              hostPort: 32400
          volumeMounts:
            - name: plexconfig
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: plexconfig
          persistentVolumeClaim:
            claimName: plex-pvc
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.plex.local.krlab.tech`)
      kind: Rule
      services:
        - name: plex
          port: 32400
    - match: Host(`plex.local.krlab.tech`)
      kind: Rule
      services:
        - name: plex
          port: 32400
  tls:
    secretName: local-krlab-tech-tls
